<resources>
    <string name="app_name">ChannelX</string>

    <string name="login_activity_title">Login</string>
    <string name="sign_up_activity_title">Sign Up</string>
    <string name="channel_list_activity_title">Channels</string>
    <string name="forgot_password_activity_title">Forgot Password</string>

    <string name="login_button">Login</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>
    <string name="forgot_password_button">Forgot Password</string>
    <string name="send_button">Send</string>
    <string name="create_button">Create</string>

    <string name="password_input_hint">Password</string>
    <string name="email_input_hint">Email</string>
    <string name="name_input_hint">Name</string>
    <string name="surname_input_hint">Surname</string>
    <string name="phone_number_input_hint">Phone Number</string>

    <string name="forgot_password_info_text">Enter your email</string>


    <string name="animated_logo_desc">ChannelX</string>
    <string name="chat_status_desc">Chat status</string>


    <string name="app_bar_search">Search</string>
    <string name="app_bar_account">Account</string>

    <string name="action_item_delete">Delete</string>
    <string name="app_bar_search_string">Search</string>
    <string name="app_bar_edit_string">Edit</string>
    <string name="app_bar_info_string">Info</string>
    <string name="app_bar_log_off_string">Logout</string>

    <!-- Eklediklerim -->

    <string name="sharedpref_email">user_email</string>
    <string name="sharedpref_userid">sharedpref_user_id</string>

    <string name="intent_user_id">intent_user_id</string>
    <string name="intent_channel_id">intent_channel_id</string>
    <string name="channel_owner_id">channel_owner_id</string>


    <string name="img_desc_send_button">SEND</string>

    <string name="message_service_label">ChannelX</string>

    <string name="adaptor_messages_data">AdaptorMessagesData</string>

    <string name="toast_connection_error">Connection Error</string>

    <string name="search_hint">Search for a channel</string>
    <string name="channel_name_hint">Channel Name</string>


</resources>
